# Vivid

./: .gitignore  CMakeLists.txt  Constants.h  README.md  database.c  database.h
client/: CMakeLists.txt  MainView.xml  client.cpp  main.cpp
client/Beans/: Group.cpp  Group.h  Message.cpp  Message.h  User.cpp  User.h
client/Controller/: ApplicationExitCallback.h  MainController.cpp  MainController.h
client/Controller/LoginController/: LoginController.cpp  LoginController.h
client/Controller/NetworkController/: NetworkController.cpp  NetworkController.h
client/Database/: database.cpp  database.h
client/JsonUtils/: JsonUtils.cpp  JsonUtils.h
client/Network/: NetworkUtils.cpp  NetworkUtils.h
client/TestUtils/: JsonTesting.cpp  JsonTesting.h  NetworkCallbackTesting.cpp  NetworkCallbackTesting.h
client/Utils/: CSSUtils.cpp  CSSUtils.h
client/View/: ViewStyle.css
client/View/LoginView/: LoginView.cpp  LoginView.h  login.xml
client/View/MainView/: MainView.cpp  MainView.h  MainView.xml
client/View/MainView/ChatView/: ChatView.cpp  ChatView.h
client/View/MainView/List/FriendList/: FriendList.cpp  FriendList.h
client/View/MainView/List/GroupList/: GroupList.cpp  GroupList.h
client/View/MainView/List/MessageList/: MessageList.cpp  MessageList.h
client/View/RegisterView/: RegisterView.cpp  RegisterView.h  RegisterView.xml
client/View/TestView/: MainView.cpp  MainView.h  TestView.cpp  TestView.h
client/View/TipView/: TipView.cpp  TipView.h
client/beans/: User.cpp  User.h
data/: database.db
server/: CMakeLists.txt  Constants.h  Message.cpp  Message.h  User.cpp  User.h  server.cpp
server/Beans/: Client.cpp  Client.h  Group.cpp  Group.h  Message.cpp  Message.h  User.cpp  User.h
server/ClientJsonUtils/: ClientJsonUtils.cpp  ClientJsonUtils.h
server/Database/: Database.cpp  Database.h
server/DatabaseUtils/: DatabaseUtils.cpp  DatabaseUtils.h
server/JsonUtils/: JsonUtils.cpp  JsonUtils.h
server/Network/: NetworkUtils.cpp  NetworkUtils.h
server/NetworkUtils/: NetworkUtils.cpp
server/TestUtils/: DatabaseTesting.cpp  DatabaseTesting.h  JsonTesting.cpp  JsonTesting.h
